:lipstick: #28: Fix too long description text

--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -73,6 +73,10 @@ html, body {
 }
 
 .mechanism-description {
+    padding-right: 15px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     font-size: 18px;
 }
 
